--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       I enjoy solving problems, coding, and exploring innovative technologies.
       My goal is to become a skilled software engineer and contribute to real-world impactful projects.
     </p>
-    <a href="/storage/emulated/0/Download/JEEVAPRIYAN_S_Resume_Professional (1).pdf download class="resume-btn">📄 Download Resume</a>
+    <a href="/storage/emulated/0/Download/JEEVAPRIYAN_S_Resume_Professional (1).pdf" download class="resume-btn">📄 Download Resume</a>
   </section>
 
   <!-- ===== SKILLS ===== -->
